@@ -1,5 +1,10 @@
 2005-02-03  Mark McLoughlin  <mark@skynet.ie>
 
+	* admin-tool/profilesdialog.py: make new and delete
+	do stuff.
+
+2005-02-03  Mark McLoughlin  <mark@skynet.ie>
+
 	* admin-tool/profilesdialog.py,
 	  admin-tool/sabayon.glade: add a "New Profile" dialog.
 
